--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "extern/customer-frontend"]
-	path = extern/customer-frontend
+[submodule "frontend"]
+	path = frontend
 	url = https://github.com/Modus-1/customer-frontend.git
