--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Gateway server for Modus Assumption",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start-dev": "node index.js --dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +21,7 @@
   "homepage": "https://github.com/Modus-1/gateway#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-http-proxy": "^1.6.3",
     "socket.io": "^4.5.3"
   }
 }
