--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/Modus-1/gateway#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-http-proxy": "^1.6.3",
     "socket.io": "^4.5.3"
