--- a/data/config.json
+++ b/data/config.json
@@ -6,6 +6,9 @@
         "path": "frontend/build",
         "devServer": "http://localhost:3000"
     },
+    "session": {
+        "maxAge": 3.6e+6
+    },
     "services": [
         { "name": "menu-api", "host": "https://localhost:7286/" }
     ]
