--- a/data/config.json
+++ b/data/config.json
@@ -11,15 +11,22 @@
         "accessControl": [
             {
                 "path": "/Kitchen*",
+                "methods": "*",
                 "levelNeeded": 1
             },
             {
                 "path": "/Admin*",
+                "methods": "*",
+                "levelNeeded": 2
+            },
+            {
+                "path": "/api/menu",
+                "methods": ["*", "!GET"],
                 "levelNeeded": 2
             }
         ]
     },
     "services": [
-        { "name": "menu-api", "host": "https://localhost:7286/" }
+        { "name": "menu-api", "host": "http://localhost:7286" }
     ]
 }
