--- a/data/config.json
+++ b/data/config.json
@@ -1,20 +1,18 @@
 {
-    "http": {
-        "port": 12345
-    },
-    "frontend": {
-        "path": "frontend/build",
-        "devServer": "http://localhost:3000"
-    },
-    "session": {
-        "maxAge": 3.6e+6,
-        "accessControl": [
-            { "path": "/Kitchen*", "methods": "*", "levelNeeded": 1 },
-            { "path": "/Admin*", "methods": "*", "levelNeeded": 2 },
-            { "path": "/api/menu", "methods": ["*", "!GET"], "levelNeeded": 2 }
-        ]
-    },
-    "services": [
-        { "name": "menu-api", "host": "http://localhost:7286" }
+  "http": {
+    "port": 12345
+  },
+  "frontend": {
+    "path": "frontend/build",
+    "devServer": "http://localhost:3000"
+  },
+  "session": {
+    "maxAge": 3.6e6,
+    "accessControl": [
+      { "path": "/Kitchen*", "methods": "*", "levelNeeded": 1 },
+      { "path": "/Admin*", "methods": "*", "levelNeeded": 2 },
+      { "path": "/api/menu", "methods": ["*", "!GET"], "levelNeeded": 2 }
     ]
+  },
+  "services": [{ "name": "menu-api", "host": "http://localhost:5286/api" }]
 }
