--- a/data/config.json
+++ b/data/config.json
@@ -14,5 +14,9 @@
       { "path": "/api/menu", "methods": ["*", "!GET"], "levelNeeded": 2 }
     ]
   },
-  "services": [{ "name": "menu-api", "host": "http://localhost:5286/api" }]
+  "services": [
+    { "name": "menu-api", "host": "http://localhost:5286/api" },
+    { "name": "order-api", "host": "http://localhost:5116/order" },
+    { "name": "order-websocket", "host": "http://localhost:6969" }
+  ]
 }
