--- a/data/config.json
+++ b/data/config.json
@@ -16,7 +16,6 @@
   },
   "services": [
     { "name": "menu-api", "host": "http://localhost:5286/api" },
-    { "name": "order-api", "host": "http://localhost:5116/order" },
-    { "name": "order-websocket", "host": "http://localhost:6969" }
+    { "name": "order-api", "host": "http://localhost:5116/order" }
   ]
 }
